third_party/rust/chromium_crates_io/vendor/zerocopy-0.7.35/tests/ui-nightly/transmute-ref-dst-not-a-reference.stderr
error[E0308]: mismatched types
  --> tests/ui-nightly/transmute-ref-dst-not-a-reference.rs:17:36
   |
17 | const DST_NOT_A_REFERENCE: usize = transmute_ref!(&0u8);
   |                                    ^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `&_`
   |
   = note:   expected type `usize`
           found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui-nightly/transmute-ref-dst-not-a-reference.rs:17:36
   |
17 | const DST_NOT_A_REFERENCE: usize = transmute_ref!(&0u8);
   |                                    ^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `&_`
   |
   = note:   expected type `usize`
           found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui-nightly/transmute-ref-dst-not-a-reference.rs:17:36
   |
17 | const DST_NOT_A_REFERENCE: usize = transmute_ref!(&0u8);
   |                                    ^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `&_`
   |
   = note:   expected type `usize`
           found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
